feat(new feature): j9 - diamond operator for anonymous inner classes